--- a/README.org
+++ b/README.org
@@ -1,18 +1,9 @@
-* Understanding Computer Science
+* Understanding Functional Programming
+Books to learn functional programming thoroughly
 
-Books to learn Computer Science thoroughly
-
-This is a list of computer science books that [[https://twitter.com/][we]] have compiled after searching in this field for around 7 years now. We have tried to stratify the result by domains and have tried to stick to only the proximate domains that have overlap with CS, so you might not find a stats/probability/category theory book here even though it might have strong undercurrents with CS. Our estimate is that by reading these books one will come to have a comprehensive understanding of CS as practiced today, in both a broad and deep manner. We would love to hear from you if we have missed any must reads or hidden gems here! [[https://twitter.com/prathyvsh][Tweet to us]] if you know about one.
+This is a list of computer science books that [[https://twitter.com/][we]] have compiled after searching in this field for around 8 years now. We have featured the books by gathering opinions from different sources on the Internet, then researching the authors, going through the index and skimming through the books ourselves. Even after being in the field for close to a decade, we have barely read any of these books. We wanted to change that situation and to learn this, we choose to learn these topics from the best books in the field, so we have try to put some effort into the research since we felt it should be useful first for ourselves, then for posterity. We would love to hear from you if we have missed any must reads or hidden gems that would aid us in our journey! [[https://twitter.com/prathyvsh][Tweet to us]] if you know about one.
 
 ** Selection Criteria
-
-The books here have been chosen with the following criteria in mind:
-
-- *Accessibility*: It should allow a newcomer to approach them and learn them, even if it's after covering other books mentioned here.
-- *Breadth*: It should give her a comprehensive view of the subject in hand and enough depth to make her literate about the subject and it's use in the domain.
-- *Open*: Encyclopediac canons which catalog the state of art is rejected and ones that approach the subjects in a way that encourages creative freedom is chosen. This is the reason Udi Manber features over other encyclopediac manuals in the field.
-- *Foundational*: Books that teach fundamentals are chosen over ones that teach specific technology. This is done because of shearing of layers whereby, latest technologies change really fast, but fundamentals stay stable over long periods of time.
-- *Self-contained*: The set of books here should stand alone by being complementary in picking up a well rounded view of the CS field. So the ones that aren't accessible (Rule 1) can be made so after reading some other book listed here.
 
 * Functional Programming
 
